<resources>
    <string name="app_name">My Inventory Application</string>
    <string name="editor_name">Add a new product</string>
    <string name="empty_title_text">Please start adding items to the inventory</string>

    <string name="product_name">Product name</string>
    <string name="product_name_hint">Please enter the name of the product</string>
    <string name="product_description">Product description</string>
    <string name="product_description_hint">Please enter a description of the product</string>
    <string name="product_price_text">Price</string>
    <string name="product_price_hint">Enter a price</string>
    <string name="product_quantity_text">Quantity</string>
    <string name="product_quantity_hint">Enter a quantity</string>
    <string name="product_sales_text">Product sales</string>
    <string name="product_sales_hint">Enter a number</string>
    <string name="product_supplier_title">Supplier name</string>
    <string name="product_supplier_title_hint">Please enter a supplier name</string>
    <string name="product_supplier_email">Supplier e-mail</string>
    <string name="product_image_text">Product image</string>
    <string name="product_image_button_text">Select image</string>

    <string name="list_item_product_name">Example of product name</string>
    <string name="list_item_product_price_text">Price</string>
    <string name="list_item_product_price">$ 5</string>
    <string name="list_item_product_quantity_text">in Stock</string>
    <string name="list_item_product_quantity">3</string>
    <string name="list_item_product_sold_text">Sold</string>
    <string name="list_item_product_sold">2</string>

    <string name="menu_main_delete_data">Delete All Data</string>
    <string name="editor_menu_save">Save</string>
    <string name="editor_menu_delete">Delete</string>
    <string name="editor_menu_order_more">Order more</string>

    <string name="adapter_toast_msg">Product out of stock</string>

    <string name="editor_activity_new_item">Add a new product</string>
    <string name="editor_activity_edit_item">Edit a product</string>
    <string name="editor_activity_error_stor_permission">Needs permission to get an item image</string>
    <string name="editor_activity_error_missing_fields">Please, fill all fields</string>
    <string name="editor_activity_error_insert_data">Something wrong with inserting data, please try again</string>
    <string name="editor_activity_success_attempt">Update is successful</string>
    <string name="editor_activity_dialog_msg">Are you sure to go back?</string>
    <string name="editor_activity_discard">Leave anyway</string>
    <string name="editor_activity_keep_editing">Continue editing</string>
    <string name="editor_activity_error_delete">Something wrong with deleting data</string>
    <string name="editor_activity_delete_success">Delete is successful</string>
    <string name="editor_activity_quantity_less_zero">Quantity can not be less than 0</string>
    <string name="editor_activity_delete_dialog_msg">Are you sure you want to delete this item?</string>
    <string name="editor_activity_delete">Delete</string>
    <string name="editor_activity_cancel">Cancel</string>

    <string name="order_more_subject">Extra order for</string>
    <string name="order_more_text_part_one">Can you ship </string>
    <string name="order_more_text_part_two"> in quantities </string>
    <string name="order_more_text_part_three">. Thanks for cooperation.</string>

</resources>
